# moss-stack

./: .env.example  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/src/: config.py  database.py  main.py
backend/src/core/: security.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 368560c8e775_initial_migration.py  55ffbebbfe83_add_created_at_and_updated_at_to_items.py  70341bde0935_add_username_field_to_users_table.py  a814d1c3753d_add_created_at_and_updated_at_to_users.py
backend/src/routes/: deps.py  models.py  root.py
backend/src/routes/auth/: route.py  service.py
backend/src/routes/items/: models.py  route.py  service.py
backend/src/routes/oauth2/: route.py
backend/src/routes/private/: route.py
backend/src/routes/users/: models.py  route.py  service.py
backend/src/utils/: auth.py
frontend/: .cta.json  Dockerfile  Dockerfile.dev  nginx.conf  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/api/: client.gen.ts  schemas.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: login-form.tsx  page-title.tsx
frontend/src/hooks/: use-auth.tsx  use-handle-error.tsx  use-toast.ts
frontend/src/lib/: utils.ts
frontend/src/routes/: __root.tsx  index.tsx  (+2 more)
scripts/: dev-deploy.sh  generate-client.sh  prod-deploy.sh
(+71 files in other folders)
